test/CheckError/Primitives/InvalidConstantStaticArraySizeParameter.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:5:8: error: static array size has type 'double_t', which doesn't match expected type 'size_t'
import int[1.0] invalidDoubleSizeParameter();

// CHECK: 1 error generated.
